2004-11-28  Roland Mas  <99.roland.mas@aist.enst.fr>

	* www/include/languages/PortugueseBrazilian.tab: Recoded to UTF-8.
	* www/include/languages/*.tab: Changed all conf/mail_charset
	values to UTF-8.

2004-11-23  Tim Perdue <tim@gforge.org>

	* fixed bug in tracker that prevented deletion of tracker
	* fixed bug in tracker where userCanView returned false for admins

2004-11-08  Tim Perdue <tim@gforge.org>

	* enhancing task mgr with more fields and properties. Much more
	will be rolled in the future.

2004-11-07  Tim Perdue <tim@gforge.org>

	* gforge 4.0.1 released

2004-11-04  Guillaume Smet <guillaume-gforge@smet.org>

	* fixed bug when updating forum due to RBAC refactoring
	* fixed [#972] SCM Plug in & Unified Diff
	* fixed [#983] "Remember me" didn't work
	* fixed notices in various places
	* technicians and submitter of a tracker item can now upload files
	* fixed [#958] www/tarballs.php removed in SCM refactoring still
	linked to on project admin page

2004-11-04  Tim Perdue <tim@gforge.org>

	* db/20041104/sql - new file expands size of groups.scm_box field

2004-11-03  Guillaume Smet <guillaume-gforge@smet.org>

	* fixed bugs in new RPM packaging
	* fixed references problem in various places

2004-11-01  Guillaume Smet <guillaume-gforge@smet.org>

	* introduced CONFFILEOUTDIR in setup script
	* fixed usage of register-plugin
	* fixed a syntax error in 20041001.sql
	* commited preliminary work on new RPM packaging
	* fixed localization in groupedit.php

2004-10-28  Guillaume Smet <guillaume-gforge@smet.org>

	* fixed a html problem in /my/ page
	* fixed a remaining cvs instead of scm in config templates

2004-10-31  Roland Mas  <99.roland.mas@aist.enst.fr>

	* db/20041031.sql: New file, containing views to be used by the
	MTAs.
	* continued work on replacing LDAP by direct PostgreSQL lookups:
	Exim4 and Postfix done.

2004-10-27  Guillaume Smet <guillaume-gforge@smet.org>

	* improved layout consistency in /my/ page